fix small logic errors related to null
